Fix sidebar section icon and spacing styling

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -276,7 +276,15 @@ figure img {
   margin-top: 0.75rem;
 }
 
-.theme-doc-sidebar-menu > .menu__list > .menu__list-item > .menu__link {
+.theme-doc-sidebar-menu
+  > .menu__list
+  > .menu__list-item
+  > :is(a, button).menu__link,
+.theme-doc-sidebar-menu
+  > .menu__list
+  > .menu__list-item
+  > .menu__list-item-collapsible
+  > :is(a, button).menu__link {
   padding-top: 3px;
   padding-bottom: 3px;
   font-weight: 600;
@@ -290,15 +298,20 @@ figure img {
   padding-bottom: 3px;
 }
 
-.theme-doc-sidebar-menu > .menu__list > .menu__list-item > .menu__link::before {
+.theme-doc-sidebar-menu
+  > .menu__list
+  > .menu__list-item
+  > :is(a, button).menu__link::before,
+.theme-doc-sidebar-menu
+  > .menu__list
+  > .menu__list-item
+  > .menu__list-item-collapsible
+  > :is(a, button).menu__link::before {
   content: "";
   flex-shrink: 0;
   width: 0.875rem;
   height: 0.875rem;
-  background-color: currentColor;
-  mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24'%3E%3Cpath stroke='black' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.8' d='M6 4.5h7.5L18 9v10.5H6z M13.5 4.5V9H18'/%3E%3C/svg%3E")
-    no-repeat center / contain;
-  -webkit-mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24'%3E%3Cpath stroke='black' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.8' d='M6 4.5h7.5L18 9v10.5H6z M13.5 4.5V9H18'/%3E%3C/svg%3E")
+  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' stroke='currentColor' stroke-width='1.8' stroke-linecap='round' stroke-linejoin='round' viewBox='0 0 24 24'%3E%3Cpath d='M6 4.5h7.5L18 9v10.5H6z'/%3E%3Cpath d='M13.5 4.5V9H18'/%3E%3C/svg%3E")
     no-repeat center / contain;
   opacity: 0.75;
 }
